--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ click==8.1.8
 colorama==0.4.6
 gitdb==4.0.12
 GitPython==3.1.44
+greenlet==3.2.1
 idna==3.10
 Jinja2==3.1.6
 joblib==1.4.2
@@ -31,6 +32,7 @@ scikit-learn==1.6.1
 scipy==1.15.2
 six==1.17.0
 smmap==5.0.2
+SQLAlchemy==2.0.40
 streamlit==1.45.0
 tenacity==9.1.2
 threadpoolctl==3.6.0
@@ -40,4 +42,3 @@ typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
 watchdog==6.0.0
-sklearn
