--- a/requirements.txt
+++ b/requirements.txt
@@ -42,3 +42,6 @@ typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
 watchdog==6.0.0
+streamlit>=1.28
+psycopg2-binary>=2.9.6
+sqlalchemy>=2.0.0
